@@ -1122,9 +1122,11 @@ int mmo_auth(struct mmo_account* account, int fd) {
 	}
 	
 	//EXE Version check [Sirius]
-        if(check_client_version == 1){
-        	if(account->version != client_version_to_connect){
-        		return 5;
+	if(account->sex != 0){
+	        if(check_client_version == 1){
+        		if(account->version != client_version_to_connect){
+        			return 5;
+			}
 		}
 	}
 	
